Revert "Fix bug #8293 truncated logo on \mobile"
This reverts commit 3aeab0ee7746cf3c479fb4287c1a13b1f3f2a591.

Remove background-size property from mobile.scss as it now gets passed to at2x

--- a/media/css/firefox/mobile/mobile.scss
+++ b/media/css/firefox/mobile/mobile.scss
@@ -163,7 +163,6 @@ main .mzp-l-content {
     @include image-replaced;
     background-position: top center;
     background-repeat: no-repeat;
-    background-size: contain;
     content: '';
     display: block;
 
